0.3.1 (dev)
  Added german translation (thanks to Leon Schumacher - 42LoCo42).
  Added dutch translation (thanks to Heimen Stoffels - Vistaus).
  Added turkish translation (thanks to Mehmet Akif - madanadam).
  Added russian translation (thanks to Carmina16).
  Added support for opendoas commad in octoxbps-sudo.
  Synched octoxbps-sudo code with lxqt-sudo version 1.1.0.
  Actions tab shows a counter feedback for inserts (with a plus signal) and 
    removals (with a minus signal) and does not steal focus anymore. 
  BugFix: Prefer bash shell when running actions.
  BugFix: Disable Info/Files tab refresh while typing in filter/search line edit.
  BugFix: Package search did not work correctly when query string contained a "+" sign.

0.3.0 (2020/07/18)
  BugFix: Removed all xbps-install -f (force) commands.
  BugFix: Enable '*' char in the "Search/by file" option.
  BugFix: Void Linux RSS news page was outdated.
  BugFix: Files tab now shows file list of non installed packages.
  BugFix: If there's xbps inside an upgrade, it is upgraded first.
  BugFix: Enable user close OctoXBPS and notifier's upgrade window during an action.
  BugFix: Use a more complete UI lockdown method during actions.
  Faster startup time thanks to deferred retrieval of outdated packages.
  Added Project Trident support.
  Added GNOME desktop support.
  Added Lumina desktop support.
  Added new sudo tool called "octoxbps-sudo". It's based on "lxqt-sudo" code 
	(without LXQt libs) and its use is mandatory in OctoXBPS.
  Added Terminal tab to execute actions manually.
  Added new icons to UI.
  Added new menu option "File/Install local package" to install any package available
	on your local repositories.
  Added drag and drop support to drop local ".xbps" packages for installation.
  Added new menu option "Search/Use instant search" to toggle automatic filtering 
	search results on package list.
  Added option to never sync database on notifier.