@@ -280,6 +280,7 @@ void MainWindow::keyPressEvent(QKeyEvent* ke)
       doRemovePacmanLockFile(); //If we are not executing any command, let's remove Pacman's lock file
     }
   } 
+
   /*else if(ke->key() == Qt::Key_Z && ke->modifiers() == (Qt::ShiftModifier|Qt::ControlModifier))
   {
     parseXBPSProcessOutput("Updating configuration file `/etc/skel/.bashrc");
@@ -295,17 +296,13 @@ void MainWindow::keyReleaseEvent(QKeyEvent* ke)
 {
   //qDebug() << "StringList: " << m_listOfVisitedPackages;
 
-  /*if ((ui->tvPackages->hasFocus()) && (
-      ke->key() == Qt::Key_Up || ke->key() == Qt::Key_Down ||
-      ke->key() == Qt::Key_Home || ke->key() == Qt::Key_End ||
-      ke->key() == Qt::Key_PageUp || ke->key() == Qt::Key_PageDown))
+  if(ui->tvPackages->hasFocus() && (ke->key() == Qt::Key_Up || ke->key() == Qt::Key_Down ||
+                                    ke->key() == Qt::Key_Home || ke->key() == Qt::Key_End ||
+                                    ke->key() == Qt::Key_PageUp || ke->key() == Qt::Key_PageDown))
   {
-    if (ui->twProperties->currentIndex() == ctn_TABINDEX_INFORMATION)
-    {
-      refreshTabInfo(false, true);
-      ui->tvPackages->setFocus();
-    }
-  }*/
+    clearTabsInfoOrFiles();
+    ui->tvPackages->setFocus();
+  }
   if (ui->tvPackages->hasFocus() && ke->key() == Qt::Key_Space)
   {
     invalidateTabs();
