@@ -41,11 +41,9 @@ public:
 
   //Executes the given command using sudo
   void runCommandInTerminalWithSudo(const QString& command);
-
-  //void openTerminal(const QString& dirName);
-  //void openRootTerminal();
   void runCommandInTerminal(const QStringList& commandList);
   void runCommandInTerminalAsNormalUser(const QStringList& commandList);
+  static QString getSudoCommand();
   static QStringList getListOfAvailableTerminals();
 
 signals:
