@@ -3,10 +3,11 @@
   Added dutch translation (thanks to Heimen Stoffels - Vistaus).
   Added turkish translation (thanks to Mehmet Akif - madanadam).
   Added russian translation (thanks to Carmina16).
-  Added support for opendoas commad in octoxbps-sudo.
+  Added support for opendoas commad in octoxbps-sudo and internal terminal.
   Synched octoxbps-sudo code with lxqt-sudo version 1.1.0.
   Actions tab shows a counter feedback for inserts (with a plus signal) and 
     removals (with a minus signal) and does not steal focus anymore. 
+  BugFix: Disable refreshing of Info and File tabs while searching for a pkg.
   BugFix: Prefer bash shell when running actions.
   BugFix: Disable Info/Files tab refresh while typing in filter/search line edit.
   BugFix: Package search did not work correctly when query string contained a "+" sign.
